# lsof

./: .cirrus.yml  .clang-format  .gitignore  .readthedocs.yaml  .travis.yml  0..README.BEFORE.README.FIRST  00CREDITS  00DCACHE  00DIALECTS  00DIST  00FAQ  00MANIFEST  00PORTING  00QUICKSTART  00README  00TEST  00XCONFIG  AFSConfig  Configure  Customize  Doxyfile  Fix-an-issue-ipv6-is-a-special-form-the-information-cannot-be-displayed.patch  HOW_TO_MAINTAIN.rst  HOW_TO_RELEASE.rst  INSTALL  Inventory  Lsof.8  Makefile.am  README.md  arg.c  check.bash  configure.ac  ddev.c  default.nix  format.el  hash.h  lsof  lsof.h  lsof_fields.h  main.c  (+12 more)
.builds/: netbsd.yml  openbsd.yml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
NEW/: usage.c
OLD/: lsof.h  main.c  misc.c  print.c  proc.c
RCS/: 00.README.FIRST,v  00CREDITS,v  00DCACHE,v  00DIALECTS,v  00DIST,v  00FAQ,v  00LSOF-L,v  00MANIFEST,v  00PORTING,v  00QUICKSTART,v  00README,v  00TEST,v  00XCONFIG,v  AFSConfig,v  ChangeLog,v  Configure,v  Customize,v  Inventory,v  Lsof.8,v  arg.c,v  lsof.h,v  lsof_fields.h,v  main.c,v  misc.c,v  node.c,v  print.c,v  proc.c,v  proto.h,v  regex.h,v  store.c,v  usage.c,v  util.c,v  version,v  zipme,v
autotools/: autotools.h.in  version.h.in
dialects/aix/: Makefile  ddev.c  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
dialects/aix/NEW/: aix-package-downloads  j2_lock.h  nfs.c  xmem.h
dialects/aix/OLD/: dlsof.h
dialects/aix/RCS/: Makefile,v  Makefile.PUCC,v  Mksrc,v  ddev.c,v  dfile.c,v  dlsof.h,v  dmnt.c,v  dnode.c,v  dnode1.c,v  dnode2.c,v  dproc.c,v  dproto.h,v  dsock.c,v  dstore.c,v  machine.h,v
dialects/darwin/: Mksrc  ddev.c  dfile.c  dlsof.h  dmnt.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
dialects/darwin/NEW/: cmpdarwin  (+7 more)
dialects/du/: Makefile  ddev.c  dmnt.c  dnode.c  dproc.c
dialects/freebsd/: Makefile  Mksrc  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c  dzfs.h  machine.h
dialects/linux/: Makefile  dfile.c  dlsof.h  dmnt.c  dnode.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
dialects/n+obsd/: Makefile  dlsof.h  dmnt.c  dnode.c  dproc.c  machine.h
dialects/n+os/: Makefile  dnode.c  dproc.c
dialects/netbsd/: Makefile  Mksrc  dlsof.h  dmnt.c  dnode.c  dnode1.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
dialects/openbsd/: Makefile  Mksrc  dfile.c  dlsof.h  dmnt.c  dnode.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
dialects/osr/: dfile.c  dlsof.h  dmnt.c  dnode.c  dproc.c  dsock.c  dstore.c  machine.h
dialects/sun/: ddev.c  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode2.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
dialects/uw/: Makefile  dfile.c  dlsof.h  dmnt.c  dnode.c  dnode1.c  dnode2.c  dnode3.c  dproc.c  dproto.h  dsock.c  dstore.c  machine.h
docs/: contributing.md  credits.md  faq.md  getting-started.md  hang.md  index.md  maintaining.md  manpage.md  manpage.sh  options.md  requirements.txt  tutorial.md
include/: lsof.h
lib/: Makefile.skel  ckkv.c  common.h  cvfs.c  dvch.c  fino.c  hash.h  isfn.c  lkud.c  lsof.c  misc.c  node.c  pdvn.c  prfp.c  print.c  proc.c  proto.h  ptti.c  rdev.c  regex.c  rmnt.c  rnam.c  rnch.c  rnmh.c  rnmt.c  snpf.c
lib/RCS/: Makefile.skel,v  ckfa.c,v  ckkv.c,v  cvfs.c,v  dvch.c,v  fino.c,v  isfn.c,v  lkud.c,v  pdvn.c,v  prfp.c,v  prtf.c,v  ptti.c,v  rdev.c,v  regex.c,v  rmnt.c,v  rnam.c,v  rnch.c,v  rnmh.c,v  rvfs.c,v  snpf.c,v
m4/: .gitignore  header.m4
scripts/: 00MANIFEST  00README  OLD  big_brother.pl  count_pf.pl  eth_proto.json  extract_eth_proto.py  extract_ip_proto.py  gen_proto.py  identd.pl  idrlogin.pl  ip_proto.json  list_NULf.pl  list_fields.pl  lsof_proto.c  lsof_proto.h  shared.pl  sort_res.pl  watch_a_file.pl
scripts/NEW/: for00MANIFEST  lsof_4.71_srcff1.diff  sort_res.perl5.orig
scripts/RCS/: 00MANIFEST,v  00README,v  big_brother.perl5,v  count_pf.perl,v  count_pf.perl5,v  identd.perl5,v  idrlogin.perl,v  idrlogin.perl5,v  list_NULf.perl5,v  list_fields.awk,v  list_fields.perl,v  shared.perl5,v  sort_res.perl5,v  watch_a_file.perl,v  xusers.awk,v
src/: arg.c  cli.h  main.c  misc.c  netstat.c  node.c  print.c  ptti.c  store.c  usage.c  util.c
support/: Distfile.msrc  GPGDistrib  GenericCopy  GenericDistrib  GenericRdist  GenericSubdir  LinuxDistrib  NetBSDDistrib  OpenBSDDistrib  SpecialRdist  makeman
support/GitHub-release/: ITaP  Purdue
support/OLD/: BSDIDistrib.bz2  GenericRdist  Make.host.bz2  Makefile.msrc.bz2  OUDistrib  atl  db  dbm  dbm-dev  dbm-spare  distfile.binaries  fortress  log.xls  lsof.message  lsof2bin  lsofbin  lsofbinary  ou.tar.bz2  rcp.distrib  simple_stat.c  tar.distrib  ubulba1.c
support/RCS/: AIXDistrib,v  BSDIDistrib,v  DUDistrib,v  DarwinDistrib,v  Distfile.msrc,v  FreeBSDDistrib,v  GPGDistrib,v  GenericCopy,v  GenericDistrib,v  GenericDistrib_bz2,v  GenericRdist,v  GenericSubdir,v  HPUXDistrib,v  LinuxDistrib,v  Make.host,v  Makefile.msrc,v  N+OBSDDistrib,v  NSDistrib,v  OSRDistrib,v  PGPDistrib,v  PTXDistrib,v  SunDistrib,v  UWDistrib,v  argtest,v  contrib.00INDEX,v  contrib.README,v  dialect3.list,v  dialect4.list,v  install-lsof,v  log.n,v  lsof.00INDEX,v  lsof.README,v  lsof.message,v  vic,v
tests/: Add2TestDB  LTbasic.c  LTbasic2.c  LTbigf.c  LTdnlc.c  LTlib.c  LTlock.c  LTnfs.c  LTnlink.c  LTshm2.c  LTsock.c  LTszoff.c  LTszoff2.c  LTunix.c  LTunix2.c  LsofTest.h  Makefile  TestDB  case-00-hello.bash  case-01-version.bash  case-13-classic.bash  case-14-classic-opt.bash  case-20-exit-status.bash  case-20-fd-only-inclusion.bash  case-20-handle-missing-files.bash  case-20-offset-field.bash  case-20-repeat-count.bash  case-21-exit-Q-status.bash  case-22-empty-process-name.bash  case-23-c-option.bash  case-30-json-output.bash  case-31-jsonl-output.bash  common.bash
tests/RCS/: 00README,v  Add2TestDB,v  CkTestDB,v  IPv4sock,v  LTbasic.c,v  LTbigf.c,v  LTdnlc,v  LTdnlc.c,v  LTlib.c,v  LTlock.c,v  LTnfs.c,v  LTnlink.c,v  LTsock.c,v  LTszoff.c,v  LTunix.c,v  LsofTest.h,v  Makefile,v  TestDB,v
(+447 files in other folders)
